--- a/app/css/style.css
+++ b/app/css/style.css
@@ -42,6 +42,7 @@ ul {
   padding: 10px 5px;
   border-bottom: 1px #555 solid;
   background: var(--secondary-background-color);
+  font-weight: bold;
 }
 
 .content.show {
